@startuml
interface java.sql.Connection {
  + close()
  + createStatement()
}

class SimpleConnectionPool {
  - pool : BlockingQueue<Connection>
  + getConnection() : Connection
  + shutdown()
}

class ConnectionProxyHandler <<InvocationHandler>> {
  - rawConnection : Connection
  + invoke(proxy, method, args) : Object
}

SimpleConnectionPool "1" *-- "0..*" java.sql.Connection : manages
SimpleConnectionPool ..> ConnectionProxyHandler : creates
ConnectionProxyHandler --> java.sql.Connection : wraps

note right of ConnectionProxyHandler
  intercepts close() method
  and returns connection to pool
end note
@enduml
